ingress/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kops-ingress
  annotations:
    # certmanager.k8s.io/issuer: acme-letsencrypt-production
    kubernetes.io/ingress.class: "nginx"
spec:
  # tls:
  # - hosts:
  #   - prometheus.k8s.retipuj.com
  #   - grafana.k8s.retipuj.com
  #   secretName: common-tls
  rules:
  - host: prometheus.k8s.retipuj.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prom-prometheus-server 
            port: 
              number: 80
  - host: grafana.k8s.retipuj.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: graf-grafana
            port: 
              number: 80
