ingress/pgadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: pgo
  annotations:
    # certmanager.k8s.io/issuer: acme-letsencrypt-production
    kubernetes.io/ingress.class: "nginx"
spec:
  # tls:
  # - hosts:
  #   - pgadmin4.k8s.retipuj.com
  #   secretName: pgadmin-tls
  rules:
  - host: pgadmin4.k8s.retipuj.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hippo-pgadmin
            port: 
              number: 5050
